# Customer-Support-Agent---Quro

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent/: cache.py
backend/app/agent/graph/: agent.py  nodes.py  state.py
backend/app/agent/tools/: document_scope.py  escalation.py  retriever.py  ticket_status.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routes/: admin.py  chat.py  conversations.py  ingest.py
backend/app/core/: settings.py
backend/app/db/: messages.py
backend/app/ingestion/: chunker.py  embedder.py  loaders.py  pipeline.py
backend/scripts/: run_migrations.py  test_admin_endpoints.py  test_agent.py  test_chat_endpoint.py  test_connection.py  test_conversation_persistence.py  test_document_scope.py  test_embedder.py  test_escalation.py  test_graph.py  test_guardrails.py  test_ingest_endpoint.py  test_loaders.py  test_memory.py  test_pipeline.py  test_retriever.py  test_semantic_cache.py
docs/: ARCHITECTURE.md  PLAN.md  PROGRESS.md  SCHEMA.md
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/admin/: DocumentUploader.tsx  EscalationsTable.tsx  (+1 more)
frontend/src/types/: chat.ts
supabase/migrations/: 001_enable_pgvector.sql  002_documents.sql  003_conversations.sql  004_rls.sql  005_storage.sql  006_semantic_cache.sql  007_admin_functions.sql
(+11 files in other folders)
