[project]
name = "enterprise-support-agent-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    # Settings and validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # LangChain / LangGraph
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-experimental>=0.3.0",
    "langgraph>=0.2.0",
    # OpenAI (embeddings: text-embedding-3-small)
    "openai>=1.30.0",
    # Cross-encoder re-ranker (runs in-process, no API cost)
    "sentence-transformers>=3.0.0",
    # Document loaders
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    # Supabase
    "supabase>=2.4.0",
    # HTTP client (Linear, Slack, Crisp integrations)
    "httpx>=0.27.0",
    # Email
    "resend>=2.0.0",
    "pdfplumber>=0.11.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",      # also used in tests for TestClient
    "ruff>=0.4.0",
    "psycopg2-binary>=2.9.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
